# cmake_test

./: CMakeLists.txt  CMakeTestConfig.h.in  Dockerfile  README.md  docker-entrypoint.sh
cmake/: json.cmake  spdlog.cmake
src/: main.cpp
